# haal-centraal-proxy-cors

./: README.md  docker-compose.yml  nginx.conf
bruno/: .env.sample  bruno.json  package-lock.json
bruno/Benk BRP Proxy/Personen/: Zoek-op-bsn.bru  Zoek-op-postcode.bru
bruno/Haal Centraal ACC/: Zoek-op-bsn.bru
bruno/Haal Centraal ACC/Bewoningen/: Zoek-op-pijldatum.bru
bruno/Haal Centraal ACC/Personen/: Zoek-op-postcode.bru
bruno/Haal Centraal ACC/Reisdocumenten/: Zoek-op-bsn.bru
bruno/Haal Centraal ACC/Verblijfplaatshistorie/: Zoek-op-pijldatum.bru
src/: Dockerfile  get-token.py  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/haal_centraal_proxy/: settings.py  urls.py  views.py  wsgi.py
src/haal_centraal_proxy/api/: client.py  exceptions.py  permissions.py  urls.py  views.py
src/tests/: conftest.py  settings.py  utils.py
src/tests/test_api/: test_permissions.py  test_views.py
