[metadata]
name = haal-centraal-proxy
version = 0.1
description = Authorization checks for accessing Haalcentraal API
long_description = Authorization checks for accessing Haalcentraal API
url = https://api.data.amsterdam.nl/hc/
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = Mozilla Public License Version 2.0
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    haal_centraal_proxy
